# filesystem-simulator

./: CMakeLists.txt  Constants.h  ContinuousFileDescriptor.cpp  ContinuousFileDescriptor.h  ContinuousFileSystem.cpp  ContinuousFileSystem.h  ContinuousFilesystem.cpp  ContinuousFilesystem.h  DescriptorManager.cpp  DescriptorManager.h  DescriptorMemoryManager.cpp  DescriptorMemoryManager.h  Directory.cpp  Directory.h  FileDescriptor.cpp  FileDescriptor.h  FileManagementLayer.cpp  FileManagementLayer.h  Filesystem.cpp  Filesystem.h  OccupationMap.cpp  OccupationMap.h  OpenedFileDescriptor.cpp  OpenedFileDescriptor.h  PathTransform.cpp  PathTransform.h  PersistentStorage.cpp  PersistentStorage.h  PersistentStorageController.cpp  PersistentStorageController.h  README.md  main.cpp  skica.txt
continuous-filesystem/: ContinuousFileDescriptor.cpp  ContinuousFileDescriptor.h  ContinuousFilesystem.cpp  ContinuousFilesystem.h  OpenedContinuousFileDescriptor.cpp  OpenedContinuousFileDescriptor.h
demo/: Demo.cpp  Demo.h  main.cpp
filesystem/: Constants.h  Directory.h  FileDescriptor.cpp  FileDescriptor.h  Filesystem.cpp  Filesystem.h  PathTransform.cpp  PathTransform.h
metadata-handlers/: DescriptorManager.cpp  DescriptorManager.h  OccupationMap.cpp  OccupationMap.h
persistent-storage/: PersistentStorage.cpp  PersistentStorage.h  PersistentStorageController.cpp  PersistentStorageController.h
scattered-filesystem/: IndirectionBlock.cpp  IndirectionBlock.h  OpenedScatteredFileDescriptor.cpp  OpenedScatteredFileDescriptor.h  ScatteredFileDescriptor.cpp  ScatteredFilesystem.cpp  (+3 more)
